[package]
name = "grrs"
version = "0.1.0"
authors = ["Astrid P"]
license = "MIT"
description = "A tool to search files - based on rust tutorial"
readme = "README.md"
homepage = "https://github.com/astridcpulse"
repository = "https://github.com/astridcpulse/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.5"
